src/objects/Playbook_Link__c.object
<CustomObject>
    <fields>
        <fullName>Alert_Exp_Date__c</fullName>
        <label>Alert Exp Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Alert_Text__c</fullName>
        <label>Alert Text</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>***</fullName>
                </value>
                <value>
                    <fullName>** New **</fullName>
                </value>
                <value>
                    <fullName>!!!</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Global__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Global</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Industry__c</fullName>
        <label>Industry</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Aerospace &amp; Defense</fullName>
                </value>
                <value>
                    <fullName>Agriculture</fullName>
                </value>
                <value>
                    <fullName>Apparel</fullName>
                </value>
                <value>
                    <fullName>Apparel &amp; Textiles</fullName>
                </value>
                <value>
                    <fullName>Associations</fullName>
                </value>
                <value>
                    <fullName>Automotive</fullName>
                </value>
                <value>
                    <fullName>Banking</fullName>
                </value>
                <value>
                    <fullName>Biotech</fullName>
                </value>
                <value>
                    <fullName>Business Services</fullName>
                </value>
                <value>
                    <fullName>Business Services/Advertising/Consulting</fullName>
                </value>
                <value>
                    <fullName>Chemicals</fullName>
                </value>
                <value>
                    <fullName>Communications</fullName>
                </value>
                <value>
                    <fullName>Computer Hardware/Software/IT Services</fullName>
                </value>
                <value>
                    <fullName>Construction</fullName>
                </value>
                <value>
                    <fullName>Consumer Goods and Services</fullName>
                </value>
                <value>
                    <fullName>Consumer Packaged Goods</fullName>
                </value>
                <value>
                    <fullName>Consumer Services</fullName>
                </value>
                <value>
                    <fullName>Education</fullName>
                </value>
                <value>
                    <fullName>Electronics</fullName>
                </value>
                <value>
                    <fullName>Energy &amp; Utilities</fullName>
                </value>
                <value>
                    <fullName>Financial Services</fullName>
                </value>
                <value>
                    <fullName>Food &amp; Beverage</fullName>
                </value>
                <value>
                    <fullName>Furniture</fullName>
                </value>
                <value>
                    <fullName>Government</fullName>
                </value>
                <value>
                    <fullName>Hardware</fullName>
                </value>
                <value>
                    <fullName>Healthcare</fullName>
                </value>
                <value>
                    <fullName>Healthcare &amp; Medical</fullName>
                </value>
                <value>
                    <fullName>Home &amp; Garden</fullName>
                </value>
                <value>
                    <fullName>Hospitality &amp; Gaming</fullName>
                </value>
                <value>
                    <fullName>Hospitality &amp; Travel</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <label>Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Playbook_Article_Link__c</fullName>
        <label>Playbook Article Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Playbook_Doc_ID__c</fullName>
        <label>Playbook Doc ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Playbook Link</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Play Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Playbook Links</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>